--- a/static/scss/product-faculty-members.scss
+++ b/static/scss/product-faculty-members.scss
@@ -1,6 +1,6 @@
 // sass-lint:disable mixins-before-declarations
 .faculty-section {
-  margin: 0 0 20px;
+  margin: 0 0 35px;
 
   h2 {
     margin: 0 0 35px;
